docs: fix firewall management command parameter format
- Fix firewall command examples with required -- prefix
- Update --status, --allow-port, --deny-port parameter formats
- Add --save option examples and documentation
- Update firewall parameter descriptions in command reference
- Remove architecture section to simplify documentation structure

--- a/.gitignore
+++ b/.gitignore
@@ -16,9 +16,9 @@ Thumbs.db
 # Logs
 *.log
 
-# Config files (contains sensitive data)
-config.toml
-
 # Temporary files
 *.tmp
 *.temp
+
+# hide my private files
+real/
